<resources>
    <string name="app_name">ISO</string>
    <string name="i_s_o_p_h_o">

        I S O P H O T O
    </string>
    <string name="iso">

        ISOPHOTO
    </string>
    <string name="dt">

        DT
    </string>
    <string name="start">

        START
    </string>
    <string name="select_photo">

        SELECT PHOTO
    </string>
    <string name="title_activity_second_page">SecondPage</string>
    <string name="save_or_sha">

        SAVE OR SHARE
    </string>
    <string name="support_us">

        SUPPORT US
    </string>
    <string name="igor_vishne">

        Igor Vishnevskii\nNadya Zyatikova\nKseniya Lukina
    </string>
    <string name="dreamteam">

        DREAMTEAM
    </string>
    <string name="vk_com_ivis">
        ЗДЕСЬ МОГЛА БЫТЬ ВАША РЕКЛАМА\n
        по вопросам сотрудничества\n
        vk.com/ivishnevskiy\n
        vk.com/o.majskaya\n
        vk.com/dakukso\n
    </string>
    <string name="rotate">

        rotate
    </string>
    <string name="filters">
        \n
        если вы хотите перейти на тёмную сторону силы,\n
        нажмите первую таинственную палитру.\n
        \n
        если вы соскучились по майнкрафту,\n
        нажмите вторую таинственную палитру.\n
        \n
        если в вашей жизни не хватает цвета,\n
        нажмите третью таинственную палитру.\n
        \n
        а если не хватает настроения "о, вот он мир без очков",\n
        нажмите четвёртую таинственную палитру.\n
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="red">red</string>
    <string name="radius">радиус</string>
    <string name="effect">эффект</string>
    <string name="threshold">порог</string>
    <string name="green">green</string>
    <string name="blue">blue</string>
</resources>