<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/start_page">
    <View
            android:id="@+id/fieldForISOPHOTO"
            android:layout_width="300dp"
            android:layout_height="77dp"
            android:layout_alignParentLeft="false"
            android:layout_alignParentTop="true"
            android:background="@drawable/title_rectangle" android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.139"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:id="@+id/isophoto"
            android:layout_width="188dp"
            android:layout_height="39dp"
            android:layout_alignParentLeft="false"
            android:text="@string/i_s_o_p_h_o"
            android:textAppearance="@style/i_s_o_p_h_o"
            android:gravity="top"
            app:layout_constraintTop_toTopOf="@+id/fieldForISOPHOTO"
            app:layout_constraintStart_toStartOf="@+id/fieldForISOPHOTO"
            app:layout_constraintBottom_toBottomOf="@+id/fieldForISOPHOTO"
            app:layout_constraintEnd_toEndOf="@+id/fieldForISOPHOTO"/>
    <View
            android:id="@+id/fieldForTeamName"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/logo" android:layout_alignParentBottom="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.81"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.127"/>
    <TextView
            android:id="@+id/dt"
            android:layout_width="30dp"
            android:layout_height="34dp"
            android:layout_alignParentLeft="true"
            android:text="@string/dt"
            android:textAppearance="@style/dt"
            android:gravity="top"
            app:layout_constraintEnd_toEndOf="@+id/fieldForTeamName"
            app:layout_constraintTop_toTopOf="@+id/fieldForTeamName"
            app:layout_constraintBottom_toBottomOf="@+id/fieldForTeamName"
            app:layout_constraintStart_toStartOf="@+id/fieldForTeamName"/>
    <Button
            android:id="@+id/startButton"
            android:text="@string/start"
            android:textAppearance="@style/start"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/start_button"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:onClick="startWorking"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.808" app:strokeColor="#FFFCFC" app:strokeWidth="5dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.81"/>
</androidx.constraintlayout.widget.ConstraintLayout>
