<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/save"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/final_page">
    <View
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/field_for_save_and_share_buttons"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.152"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/fieldForSaveAndShareButtons"/>
    <View
            android:id="@+id/fieldForTeamStuff"
            android:layout_width="300dp"
            android:layout_height="76dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/field_for_team_stuff"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintVertical_bias="0.357"/>
    <View
            android:id="@+id/fieldForTeamName"
            android:layout_width="112dp"
            android:layout_height="42dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/field_for_team_name"
            app:layout_constraintTop_toTopOf="@+id/fieldForTeamStuff"
            app:layout_constraintEnd_toEndOf="@+id/fieldForTeamStuff"
            app:layout_constraintStart_toStartOf="@+id/fieldForTeamStuff" app:layout_constraintHorizontal_bias="0.829"
            app:layout_constraintBottom_toBottomOf="@+id/fieldForTeamStuff"/>
    <TextView
            android:id="@+id/saveOrShare"
            android:layout_width="180dp"
            android:layout_height="28dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/save_or_sha"
            android:textAppearance="@style/save_or_sha"
            android:gravity="top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.242"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/fieldForSaveAndShareButtons"
            app:layout_constraintVertical_bias="0.905"/>
    <TextView
            android:id="@+id/support"
            android:layout_width="164dp"
            android:layout_height="28dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/support_us"
            android:textAppearance="@style/support_us"
            android:gravity="top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.226"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/fieldForTeamStuff" app:layout_constraintVertical_bias="0.961"/>
    <TextView
            android:id="@+id/teamStuff"
            android:layout_width="105dp"
            android:layout_height="57dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/igor_vishne"
            android:textAppearance="@style/igor_vishne"
            android:gravity="top"
            app:layout_constraintBottom_toBottomOf="@+id/fieldForTeamStuff"
            app:layout_constraintTop_toTopOf="@+id/fieldForTeamStuff"
            app:layout_constraintEnd_toEndOf="@+id/fieldForTeamStuff"
            app:layout_constraintStart_toStartOf="@+id/fieldForTeamStuff" app:layout_constraintHorizontal_bias="0.112"
            app:layout_constraintVertical_bias="0.578"/>
    <TextView
            android:id="@+id/dreamTeam"
            android:layout_width="88dp"
            android:layout_height="19dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/dreamteam"
            android:textAppearance="@style/dreamteam"
            android:gravity="top"
            app:layout_constraintTop_toTopOf="@+id/fieldForTeamName"
            app:layout_constraintBottom_toBottomOf="@+id/fieldForTeamName"
            app:layout_constraintStart_toStartOf="@+id/fieldForTeamName"
            app:layout_constraintEnd_toEndOf="@+id/fieldForTeamName"/>
    <ImageButton
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_save" android:id="@+id/saveButton"
            app:layout_constraintEnd_toEndOf="@+id/fieldForSaveAndShareButtons"
            app:layout_constraintStart_toStartOf="@+id/fieldForSaveAndShareButtons"
            app:layout_constraintTop_toTopOf="@+id/fieldForSaveAndShareButtons"
            app:layout_constraintBottom_toBottomOf="@+id/fieldForSaveAndShareButtons"
            app:layout_constraintHorizontal_bias="0.117" app:layout_constraintVertical_bias="0.533"/>
    <ImageButton
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_gmail"
            android:id="@+id/shareWithGmailButton"
            app:layout_constraintStart_toStartOf="@+id/fieldForSaveAndShareButtons"
            app:layout_constraintEnd_toEndOf="@+id/fieldForSaveAndShareButtons"
            app:layout_constraintBottom_toBottomOf="@+id/fieldForSaveAndShareButtons"
            app:layout_constraintTop_toTopOf="@+id/fieldForSaveAndShareButtons"
            app:layout_constraintHorizontal_bias="0.62"/>
    <ImageButton
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_instagram"
            android:id="@+id/shareWithInstagramButton"
            app:layout_constraintBottom_toBottomOf="@+id/fieldForSaveAndShareButtons"
            app:layout_constraintTop_toTopOf="@+id/fieldForSaveAndShareButtons"
            app:layout_constraintStart_toStartOf="@+id/fieldForSaveAndShareButtons"
            app:layout_constraintEnd_toEndOf="@+id/fieldForSaveAndShareButtons"
            app:layout_constraintHorizontal_bias="0.888"/>
    <ImageButton
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_vk" android:id="@+id/shareWithVKButton"
            app:layout_constraintStart_toStartOf="@+id/fieldForSaveAndShareButtons"
            app:layout_constraintEnd_toEndOf="@+id/fieldForSaveAndShareButtons"
            app:layout_constraintTop_toTopOf="@+id/fieldForSaveAndShareButtons"
            app:layout_constraintHorizontal_bias="0.344"
            app:layout_constraintBottom_toBottomOf="@+id/fieldForSaveAndShareButtons"/>
    <ImageView
            android:layout_width="281dp"
            android:layout_height="305dp" app:srcCompat="@android:drawable/divider_horizontal_bright"
            android:id="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/fieldForTeamStuff"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>